--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">Easy Notes</string>
     <string name="all_deleted">All Notes DEleted</string>
     <string name="are_you_sure">Do you want to delete all notes?</string>
+    <string name="title_activity_editor_nv">EditorNVActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="tab_date">Date</string>
+    <string name="tab_time">Time</string>
 </resources>
