--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="action_settings">Settings</string>
     <string name="tab_date">Date</string>
     <string name="tab_time">Time</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
